# ProbAsn

./: .gitignore  LICENSE  README.md  download_db.txt  input_file_description.md  install_env.sh  pyproject.toml  requirements.txt  setup.py
db/: download_db.txt  place_db_directories_here.txt  place_db_file_here.txt  place_db_files_here.txt
examples/: Add_to_DB.ipynb  Add_to_DB.py  Make_DB_ShiftML2.ipynb  Make_DB_ShiftML2.py  Merge_DBs.ipynb  Split_DB.ipynb  Theophylline_C-H.ipynb  Theophylline_C.ipynb  Thymol_C-H.ipynb  Thymol_C.ipynb  Undo_DB.py  app.py  done.txt  make_db.sh  run.ipynb  run.py  run_db.sh  test.cif  test.db  theophylline_C-H_minimal_input.in  theophylline_C_minimal_input.in  thymol_C-H.in  thymol_C-H_mult_1.in  thymol_C-H_mult_3.in  thymol_C.in  thymol_C_mult_0.in  thymol_C_mult_1.in  thymol_C_mult_3.in
output/theophylline/: structure.mol
output/thymol/: structure.mol
src/: assign.py  db.py  draw.py  graph.py  sim.py  utils.py
src/ProbAsn/: __init__.py  assign.py  db.py  draw.py  graph.py  gui.py  sim.py  utils.py
